--- a/app/index.html
+++ b/app/index.html
@@ -31,14 +31,14 @@
     <script defer src="/__/firebase/5.5.2/firebase-storage.js"></script>
     <script defer src="/__/firebase/5.5.2/firebase-firestore.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
-    <!-- <script defer src="/__/firebase/init.js"></script> -->
+    <script defer src="/__/firebase/init.js"></script>
 
     <!-- <script src="//unpkg.com/navigo@6"></script> -->
     
     <!-- include javascrip library files -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/angular/angular.min.js"></script>
-    <script src="./node_modules/angularfire/dist/angularfire.min.js"></script>
+    <!-- <script src="./node_modules/angularfire/dist/angularfire.min.js"></script> -->
     <script src="./node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
     <script src="./node_modules/oclazyload/dist/ocLazyLoad.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
