--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Welcome AngularJs App with Firebase</title>
+
+  <!-- bootstrap -->
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+
+  <!-- angular csp -->
   <link rel="stylesheet" href="./node_modules/angular/angular-csp.css">
+
+  <!-- fontawesome icons -->
   <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+  
+  <!-- Material Design Components -->
+  <link rel="stylesheet"
+  href="https://unpkg.com/material-components-web@0.39.3/dist/material-components-web.min.css">
+  <script src="https://unpkg.com/material-components-web@0.39.3/dist/material-components-web.js"></script>
+
+  <!-- App Styling -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+  <!-- custom css -->
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -27,6 +44,7 @@
     <div class="app-content" ui-view></div>
   </div>
 
+  <!-- include javascrip library files -->
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/5.5.2/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -38,17 +56,32 @@
   <!-- initialize the SDK after all desired features are loaded -->
   <script defer src="/__/firebase/init.js"></script>
 
-  <!-- <script src="//unpkg.com/navigo@6"></script> -->
+  <script src="//unpkg.com/navigo@6"></script>
 
-  <!-- include javascrip library files -->
+  <!-- jquery -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+
+  <!-- angular -->
   <script src="./node_modules/angular/angular.min.js"></script>
+
+  <!-- angular ui router -->
   <script src="./node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
+
+  <!-- angular oc lazyload -->
   <script src="./node_modules/oclazyload/dist/ocLazyLoad.min.js"></script>
+
+  <!-- bootstrap -->
   <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <!-- bootboxjs -->
   <script src="./node_modules/bootbox/bootbox.min.js"></script>
+
+  <!-- momentjs -->
   <script src="./node_modules/moment/min/moment.min.js"></script>
+
+  <!-- underscorejs -->
   <script src="./node_modules/underscore/underscore-min.js"></script>
+
   <!-- custom javascript files -->
   <script src="./index.js"></script>
   <script src="./app.js"></script>
