--- a/app/ratings/add.html
+++ b/app/ratings/add.html
@@ -1,26 +1,1 @@
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form class="">
-                    <div class="form-group">
-                        <label for="text">Give us some comment:</label>
-                        <textarea name="text" id="text" rows="5" class="form-control" ng-model="addRating.text"></textarea>
-                    </div>
-                </form>
-                {{ addRating | json }}
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
+Add Rating Page
